# iris-artifact-eval

./: Cargo.toml  INSTALL.md  README.md
.github/workflows/: ci.yml
configs/: offline.toml  online-vdev.toml  online.toml
core/: Cargo.toml
core/src/: config.rs  lib.rs
core/src/conntrack/: conn_id.rs  mod.rs
core/src/filter/: mod.rs
core/src/lcore/: mod.rs
core/src/memory/: mbuf.rs
core/src/runtime/: mod.rs
core/src/stats/: prometheus.rs
datatypes/: Cargo.toml
datatypes/src/: conn_fts.rs  connection.rs  dns_transaction.rs  http_transaction.rs  lib.rs  packet.rs  packet_list.rs  quic_stream.rs  ssh_handshake.rs  static_type.rs  tls_handshake.rs
examples/: run_repeat.py
examples/basic/: Cargo.toml
examples/basic/src/: main.rs
examples/benchmark/: Cargo.toml  generate.py  get_zeroloss.py  run.py
examples/benchmark/src/: main.rs
examples/combined/: Cargo.toml  README.md
examples/combined/src/: main.rs  measuring_sec.rs  ml_qos.rs  openvpn.rs
examples/conn_stats/: Cargo.toml
examples/enc_conns/: Cargo.toml
examples/malicious_sites/: Cargo.toml  README.md  generate.py  run.py
examples/measuring_sec/: Cargo.toml
examples/ml_qos/: Cargo.toml  data.txt  video_snis.txt
examples/open_vpn/: Cargo.toml
examples/re_matcher/: Cargo.toml
filtergen/: Cargo.toml
filtergen/src/: cache.rs  codegen.rs  lib.rs  packet_filter.rs  parse.rs  state_filters.rs  subscription.rs
tests/functionality/: README.md  script.py  test_config.toml
tests/functionality/basic_test/: Cargo.toml
tests/functionality/basic_test/src/: main.rs
(+23 files in other folders)
