[workspace]
members = [
    "core",
    "datatypes",
    "examples/basic",
    "examples/enc_conns",
    "examples/benchmark",
    "examples/re_matcher",
    "tests/functionality/basic_test",
    "examples/measuring_sec",
    "examples/ml_qos",
    "examples/open_vpn", "examples/malicious_sites", "examples/combined", "examples/conn_stats",
]
resolver = "2"

[profile.release]
lto = true

[patch.crates-io]
pcap = { git = 'https://github.com/thegwan/pcap', branch = 'compile-optimized' }

