[package]
name = "basic_test"
version = "0.1.0"
edition = "2021"

[dependencies]
lazy_static = "1.5.0"
iris-core = { path = "../../../core" }
iris-datatypes = { path = "../../../datatypes" }
iris-filtergen = { path = "../../../filtergen" }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
clap = { version = "3.2.23", features = ["derive"] }
env_logger = "0.8.4"